--- a/package.json
+++ b/package.json
@@ -3,5 +3,14 @@
   "version": "0.1.0",
   "engines": {
     "node": ">=14.x"
+  },
+  "scripts": {
+    "test": "jest --coverage"
+  },
+  "devDependencies": {
+    "eslint": "8.15.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "jest": "28.1.0"
   }
 }
