--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "test": "jest --coverage"
   },
   "devDependencies": {
+    "@babel/cli": "7.17.10",
+    "@babel/core": "7.18.2",
+    "@babel/node": "7.17.10",
+    "@babel/preset-env": "7.18.2",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.26.0",
-    "jest": "28.1.0"
+    "jest": "28.1.0",
+    "nodemon": "^2.0.16"
   }
 }
