--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "jest": "28.1.0",
     "nodemon": "^2.0.16"
   },
-  "type": "module",
   "dependencies": {
-    "node-fetch": "3.2.5"
-  }
+    "cfonts": "3.1.0",
+    "chalk": "5.0.1",
+    "commander": "9.3.0",
+    "gradient-string": "2.0.1",
+    "node-fetch": "3.2.5",
+    "table": "6.8.0"
+  },
+  "type": "module"
 }
