--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "5.0.1",
     "commander": "9.3.0",
     "gradient-string": "2.0.1",
+    "nanospinner": "1.1.0",
     "node-fetch": "3.2.5",
     "table": "6.8.0"
   },
