--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "import/extensions": "off"
+        "import/extensions": "off",
+        "eslint-env jest": "off"
     }
 }
