--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "md-links",
   "version": "0.1.0",
+  "author": {
+    "name": "Eliana Méndez",
+    "email": "elianamendez1809@gmail.com",
+    "url": "https://github.com/elianamendez1"
+  },
+  "description": "Md-links tool checker es una libreria de línea de comando (CLI) que facilita la lectura, análisis y generar reportes estadísticos de los enlaces contenidos en archivos de formato Markdown.",
+  "main": "./src/mdlinks.js",
+  "directories": {
+    "test": "test"
+  },
   "engines": {
     "node": ">=14.x"
   },
   "scripts": {
-    "dev": "node ./src/mdlinks.js",
+    "dev": "node ./src/mdLinks.js",
     "demonio": "nodemon ./src/mdlinks.js",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage"
+    "test": "jest --coverage"
   },
   "bin": {
     "md-links": "./src/cli.js"
   },
+  "bugs": {
+    "url": "https://github.com/elianamendez1/LIM017-md-links/issues"
+  },
+  "homepage": "https://github.com/elianamendez1/LIM017-md-links#readme",
   "devDependencies": {
     "@babel/cli": "7.17.10",
     "@babel/core": "7.18.2",
