--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "dev": "node ./src/mdLinks.js",
     "demonio": "nodemon ./src/mdlinks.js",
-    "test": "jest --env=node --coverage"
+    "test": "jest --coverage"
   },
   "bin": {
     "md-links": "./src/cli.js"
@@ -35,7 +35,6 @@
     "@babel/core": "7.18.2",
     "@babel/node": "7.17.10",
     "@babel/preset-env": "7.18.2",
-    "cross-env": "7.0.3",
     "eslint": "8.16.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.26.0",
@@ -52,6 +51,5 @@
     "nodemon": "2.0.16",
     "table": "6.8.0"
   },
-
   "type": "module"
 }
